# dir2sh

./: Cargo.toml  README.md
src/: main.rs
